--- a/BlazorFrameworkDemo/wwwroot/index.html
+++ b/BlazorFrameworkDemo/wwwroot/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>BlazorFrameworkDemo</title>
         <base href="/" />
         <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
@@ -22,5 +22,6 @@
             <a class="dismiss">🗙</a>
         </div>
         <script src="_framework/blazor.webassembly.js"></script>
+        <script src="orientation.js"></script>
     </body>
 </html>
